# pdl-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  docker-image.yml
app/: main.py  models.py
app/services/: aggregator.py  import_service.py  lemma_service.py
