[project]
name = "adl-api"
version = "0.1.0"
description = "Dictionary API for the ADL platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "pymongo>=4.15.4",
]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest"
dev = { shell = "set -a && source .env && set +a && uv run fastapi dev" }

[tool.poe.tasks.check]
sequence = [
    { cmd = "ruff check ." },
    { cmd = "ruff format --check ." },
]
help = "Run all checks"
